[package]
name = "dl"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.6"
content_disposition = "0.4.0"
eframe = "0.29.1"
egui_extras = "0.29.1"
random-string = "1.1.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
