[package]
name = "dl"
version = "0.1.0"
edition = "2021"

[dependencies]
content_disposition = "0.4.0"
eframe = "0.29.1"
egui_extras = "0.29.1"
futures-util = "0.3.31"
opener = "0.7.2"
random-string = "1.1.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
mimalloc = "0.1"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"
